[package]
name = "deepfence-agent-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.3", features = ["tokio", "zstd"] }
clap = { version = "4.1", features = ["derive"] }
deepfence-agent-common = { path = "../common" }
env_logger = "0.10"
git2 = "0.16"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = "1.25"

[features]
static = ["openssl"]
